# resque-telework-daemon-hs

./: Makefile  README.md  daemon.hs  hostinfo.hs  redis.hs  resque-telework-daemon-hs.cabal
src/: auto.hs  common.hs  daemon.hs  hostinfo.hs  redis.hs  spawn.hs  worker.hs
